--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "vueniverse",
+  "name": "Vueniverse",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/server/server.bundle",
-    "build": "npm run build-ssr && run-p build-server build-client",
+    "build": "rimraf dist && npm run build-ssr && run-p build-server build-client",
     "dev": "run-p dev-server",
-
     "dev-client": "webpack-dev-server --config ./tools/webpack/client.config",
     "dev-server": "node ./tools/dev/serverDev",
     "build-server": "webpack --config ./tools/webpack/server.config",
@@ -32,11 +31,13 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-watch": "^2.0.6",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.1",
     "ramda": "^0.23.0",
+    "rimraf": "^2.5.4",
     "vue-loader": "^10.3.0",
     "vue-ssr-webpack-plugin": "^1.0.1",
     "vue-template-compiler": "^2.1.10",
