--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "app-root-dir": "^1.0.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
-    "serialize-javascript": "^1.3.0",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
     "vue-server-renderer": "^2.1.10",
+    "vue-ssr-html-stream": "^2.1.0",
     "vuex": "^2.1.2",
     "vuex-router-sync": "^4.1.2"
   },
