--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=production node ./dist/server/server.bundle",
-    "build": "NODE_ENV=production rimraf dist && npm run build-ssr && run-p build-server build-client",
-    "dev": "run-p dev-server",
+    "start": "node ./dist/server/server.bundle",
+    "build": "rimraf dist && npm run build-ssr && run-p build-server build-client",
+    "dev": "run-s build-dev dev-server",
 
     "bs": "run-s build start",
+    "bd": "run-s build dev",
 
+    "build-dev": "run-p dev-client dev-ssr",
     "dev-client": "webpack-dev-server --config ./tools/webpack/client.config",
     "dev-server": "node ./tools/dev/serverDev",
     "build-server": "webpack --config ./tools/webpack/server.config",
