--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "start": "node ./dist/server/server.bundle",
     "build": "rimraf dist && npm run build-ssr && run-p build-server build-client",
     "dev": "run-s build-dev dev-server",
-
     "bs": "run-s build start",
     "bd": "run-s build dev",
-
     "build-dev": "run-p build-client build-ssr",
     "dev-client": "webpack-dev-server --config ./tools/webpack/client.config",
     "dev-server": "node ./tools/dev/serverDev",
     "build-server": "webpack --config ./tools/webpack/server.config",
     "build-client": "webpack --config ./tools/webpack/client.config",
     "build-ssr": "webpack --config ./tools/webpack/ssr.config",
-
     "push": "git status && git pull && git commit -am 'update' && git push"
   },
   "dependencies": {
@@ -41,6 +38,7 @@
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
+    "memory-fs": "^0.4.1",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.1",
     "ramda": "^0.23.0",
