--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "app-root-dir": "^1.0.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0",
     "vue-server-renderer": "^2.1.10",
@@ -36,6 +38,7 @@
     "babel-watch": "^2.0.6",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "memory-fs": "^0.4.1",
