--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "scripts": {
     "start": "node ./dist/server/server.bundle",
     "build": "rimraf dist && npm run build-ssr && run-p build-server build-client",
-    "dev": "run-s build-dev dev-server",
-    "bs": "run-s build start",
-    "bd": "run-s build dev",
-    "build-dev": "run-p build-client build-ssr",
-    "dev-client": "webpack-dev-server --config ./tools/webpack/client.config",
-    "dev-server": "node ./tools/dev/serverDev",
+    "dev": "node ./tools/dev/serverDev",
     "build-server": "webpack --config ./tools/webpack/server.config",
     "build-client": "webpack --config ./tools/webpack/client.config",
     "build-ssr": "webpack --config ./tools/webpack/ssr.config",
