--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "app-root-dir": "^1.0.2",
+    "body-parser": "^1.16.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.8.4",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "vue": "^2.1.10",
