added mocha tests

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./dist/server/server.bundle",
     "build": "rimraf dist && npm run build-ssr && run-p build-server build-client",
     "dev": "node ./tools/dev/serverDev",
+    "test": "mocha --compilers js:babel-core/register --recursive ./src/server",
     "build-server": "webpack --config ./tools/webpack/server.config",
     "build-client": "webpack --config ./tools/webpack/client.config",
     "build-ssr": "webpack --config ./tools/webpack/ssr.config",
@@ -17,6 +18,7 @@
     "body-parser": "^1.16.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "jest": "^19.0.0",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.4",
     "socket.io": "^1.7.3",
